compiler/testData/diagnostics/testsWithJsStdLib/native/externalFunInterface.kt
// FIR_IDENTICAL
external fun interface <!WRONG_EXTERNAL_DECLARATION!>I<!> {
    fun f()
}